--- a/engine/pyproject.toml
+++ b/engine/pyproject.toml
@@ -1,14 +1,12 @@
 [tool.poetry]
-name = "dt-engine"
+name = "engine"
 version = "0.1.0"
 description = ""
 authors = ["will-s-stone <will@williamstone.me>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.9"
-transformers = "^4.44.2"
-flask = "^3.0.3"
+python = "^3.12"
 
 
 [build-system]
