--- a/engine/pyproject.toml
+++ b/engine/pyproject.toml
@@ -6,7 +6,11 @@ authors = ["will-s-stone <will@williamstone.me>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.12"
+python = "^3.9"
+transformers = "^4.44.2"
+torch = "^2.4.1"
+tensorflow = "^2.17.0"
+tf-keras = "^2.17.0"
 
 
 [build-system]
